[tool.poetry]
name = "poeblix"
version = "0.2.0"
description = "Poetry plugin that adds support for building wheel files using the poetry.lock file, and data_files just like in setup.py"
authors = ["spoorn <spookump@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/spoorn/poeblix"
repository = "https://github.com/spoorn/poeblix"
keywords = ["poeblix", "utility", "poetry", "plugin", "poetry-plugin", "wheel", "distribution", "data_files"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
    { include = "poeblix", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
# TODO: use release version when 1.2+ is officially out
poetry = "1.2.0b1"
pkginfo = "*"
pytest = "*"
pytest-pspec = "*"
pytest-cov = "*"

[tool.poetry.group.dev.dependencies]
flake8 = "*"
pre-commit = "*"
mypy = "*"

[tool.poetry.plugins."poetry.application.plugin"]
# This must be the same as the package name due to https://github.com/python-poetry/poetry/pull/5412#issuecomment-1089978391
poeblix = "poeblix.plugins:BlixPlugin"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
