[tool.poetry]
name = "poeblix"
version = "0.7"
description = "Poetry plugin that adds support for building wheel files using the poetry.lock file, and data_files just like in setup.py"
authors = ["spoorn <spookump@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/spoorn/poeblix"
repository = "https://github.com/spoorn/poeblix"
keywords = ["poeblix", "utility", "poetry", "plugin", "poetry-plugin", "wheel", "distribution", "data_files"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
    { include = "poeblix", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.7"
poetry = {version = "^1.2|^1.2.0rc1|^1.3|^1.4", allow-prereleases = true}

[tool.poetry.group.dev.dependencies]
flake8 = "*"
pre-commit = "*"
mypy = "*"
pkginfo = "*"
pytest = "*"
pytest-pspec = "*"
pytest-cov = "*"
# flake8 requires importlib_metadata < 5.0 https://github.com/python/importlib_metadata/issues/406
# This breaks the Github Actions tests
importlib-metadata = "<5.0"

[tool.poetry.plugins."poetry.application.plugin"]
# This must be the same as the package name due to https://github.com/python-poetry/poetry/pull/5412#issuecomment-1089978391
poeblix = "poeblix.plugins:BlixPlugin"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
addopts = "--verbose --cov poeblix --color=yes --cov-report term-missing --cov-fail-under 80 --cov-branch"
testpaths = ["test"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
