[tool.poetry]
name = "blixexample"
version = "0.1.0"
description = "Example Python package used to test poeblix"
authors = ["spoorn <spookump@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "1.4.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
