[tool.poetry]
name = "blixexample"
version = "0.1.0"
description = "Example Python package used to test poeblix"
authors = ["spoorn <spookump@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
nemoize = "^0.1.0"
pandas = "1.4.2"
# https://github.com/spoorn/poeblix/issues/8
gunicorn = { version = "^19.9.0", optional = true }

[tool.poetry.extras]
gunicorn = ["gunicorn"]

[tool.poetry.group.dev.dependencies]
flake8 = "^4.0.1"

[tool.poetry.group.integ]
optional = true

[tool.poetry.group.integ.dependencies]
pytest = "7.1.2"

# Example data_files
[tool.blix.data]
data_files = [
    { destination = "share/data/", from = [ "data_files/test.txt", "data_files/anotherfile" ] },
    { destination = "share/data/threes", from = [ "data_files/athirdfile" ] }
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
