[tool.poetry]
name = "blixexample"
version = "0.1.0"
description = "Example Python package used to test poeblix"
authors = ["spoorn <spookump@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
nemoize = "^0.1.0"
pandas = ">=1.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^4.0.1"

# Example data_files
[tool.blix.data]
data_files = [
    { destination = "share/data/", from = [ "data_files/test.txt", "data_files/anotherfile" ] },
    { destination = "share/data/threes", from = [ "data_files/athirdfile" ] }
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
